--- a/css/style.scss
+++ b/css/style.scss
@@ -24,6 +24,7 @@
 }
 
 #wrap {
+    background: #f9f9f9 url(../images/b.png);
     overflow-x: hidden;
 }
 
@@ -35,19 +36,13 @@
     top: 0;
     width: 100%;
     height: 100vh;
+
 }
 
 /* https://www.crocus.co.kr/1582 */
 
 #welcome .wel_bg {}
 
-#welcome .line {
-    margin: 0 auto;
-    margin-top: 240px;
-    width: 65%;
-    height: 2px;
-    background: linear-gradient(to left, #fc5c7d, #6a82fb);
-}
 
 #welcome .wel_text {
     width: 100%;
@@ -58,6 +53,7 @@
 }
 
 #welcome .wel_text h2 {
+
     text-align: center;
     width: 100%;
     font-size: 99px;
@@ -72,44 +68,216 @@
     font-weight: 300;
     margin-top: -65px;
 
-    background: white;
-    color: black;
+
+    color: #f9f9f9;
     margin: 0;
     padding: 0;
     overflow: hidden;
     font-weight: 800;
 
-    &:before {
-        content: '';
-        display: block;
-        position: absolute;
-        -webkit-filter: blur(20px);
-        filter: blur(20px);
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        mix-blend-mode: screen;
-        background-image: repeating-linear-gradient(-45deg, transparent, transparent 1em, #9E2053 1em, orange 50%), repeating-linear-gradient(45deg, #111626, #111626 1em, pink 1em, #571B3D 50%), ;
-        background-size: 3em 3em, 2em 2em;
-        animation-name: ani;
-        animation-duration: 40s;
-        animation-timing-function: linear;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
+
+}
+
+
+
+
+/*애니*/
+:root {
+    --white: #fff;
+    --dark-yellow: #ffcc66;
+    --light-yellow: #ffff99;
+    --light-pink: #ffcccf;
+    --light-blue: #ccfffc;
+    --dark-purple: #4b1a63;
+    --dark-blue: #000099;
+    --black: #000;
+
+    --star-size-s: 14px;
+    --star-size-m: 20px;
+    --star-size-l: 26px;
+
+
+}
+
+body {
+    //background: black;
+
+}
+
+.sky {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    animation-name: sunset;
+    animation-duration: 15s;
+    animation-fill-mode: forwards;
+}
+
+.moon {
+    position: absolute;
+    width: 90px;
+    height: 90px;
+    background: transparent;
+    border-radius: 50%;
+    margin-left: 74%;
+    animation-name: rise;
+    animation-duration: 10s;
+    animation-fill-mode: forwards;
+    animation-delay: 4s;
+    animation-timing-function: ease-out;
+}
+
+.stars {
+    position: absolute;
+    opacity: 0;
+    background: white;
+    clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+    -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+}
+
+.star1 {
+    width: var(--star-size-s);
+    height: var(--star-size-s);
+    margin-left: 8%;
+    margin-top: 12%;
+    animation: twinkle 10s infinite, fade-in 10s 1;
+    -webkit-animation: twinkle 1s infinite, fade-in 10s ease 1s 1;
+}
+
+.star2 {
+    width: var(--star-size-l);
+    height: var(--star-size-l);
+    margin-left: 30%;
+    margin-top: 8%;
+    animation: twinkle 0.9s infinite, fade-in 12s 1;
+    -webkit-animation: twinkle 0.9s infinite, fade-in 12s ease 1s 1;
+}
+
+.star3 {
+    width: var(--star-size-m);
+    height: var(--star-size-m);
+    margin-left: 70%;
+    margin-top: 15%;
+    animation: twinkle 1.1s infinite, fade-in 14s 1;
+    -webkit-animation: twinkle 1.1s infinite, fade-in 14s ease 1s 1;
+}
+
+.star4 {
+    width: var(--star-size-m);
+    height: var(--star-size-m);
+    margin-left: 20%;
+    margin-top: 25%;
+    animation: twinkle 0.8s infinite, fade-in 16s 1;
+    -webkit-animation: twinkle 0.8s infinite, fade-in 16s ease 1s 1;
+}
+
+.star5 {
+    width: var(--star-size-l);
+    height: var(--star-size-l);
+    margin-left: 36%;
+    margin-top: 30%;
+    animation: twinkle 1.2s infinite, fade-in 18s 1;
+    -webkit-animation: twinkle 1.2s infinite, fade-in 18s ease 0s 1;
+}
+
+.star6 {
+    width: var(--star-size-s);
+    height: var(--star-size-s);
+    margin-left: 50%;
+    margin-top: 20%;
+    animation: twinkle 0.7s infinite, fade-in 20s 1;
+    -webkit-animation: twinkle 0.7s infinite, fade-in 20s ease 0s 1;
+}
+
+
+@keyframes sunset {
+    0% {
+        background: linear-gradient(180deg,
+                var(--light-yellow),
+                var(--dark-yellow),
+                var(--white));
+    }
+
+    15% {
+        background: linear-gradient(var(--light-yellow),
+                var(--dark-yellow),
+                var(--white));
+    }
+
+    30% {
+        background: linear-gradient(var(--light-pink),
+                var(--light-yellow),
+                var(--dark-yellow));
+    }
+
+    50% {
+        background: linear-gradient(var(--light-blue),
+                var(--light-pink),
+                var(--light-yellow));
+    }
+
+    70% {
+        background: linear-gradient(var(--dark-purple),
+                var(--light-blue),
+                var(--light-pink));
+    }
+
+    99% {
+        background: linear-gradient(var(--dark-blue),
+                var(--dark-purple),
+                var(--light-blue));
+    }
+
+    100% {
+        background: linear-gradient(var(--black),
+                var(--dark-blue),
+                var(--dark-purple));
+    }
+}
+
+@keyframes rise {
+    0% {
+        top: 400px;
+        box-shadow: 0px 0px 0px 0px white;
+    }
+
+    100% {
+        box-shadow: 16px 10px 0px 0px white;
+        top: 10%;
+    }
+}
+
+@keyframes fade-in {
+    60% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+        background: white;
+    }
+}
+
+@keyframes twinkle {
+    50% {
+        transform: scale(0.5);
+        opacity: 0.5;
+    }
+}
+
+@keyframes fade-in {
+    60% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+        background: white;
     }
 }
 
 
-@keyframes ani {
-    from {
-        background-position: 0 0;
-    }
 
-    to {
-        background-position: 400% 0;
-    }
-}
 
 /*############### #main ###############  */
 
@@ -123,6 +291,8 @@
     /* background: #f9f9f9; */
     overflow: hidden;
 }
+
+
 
 #home .nav {
     position: relative;
@@ -192,9 +362,10 @@
 }
 
 #home .content {
+
     height: 100vh;
-    display: flex;
-    justify-content: flex-end;
+    // display: flex;
+    // justify-content: flex-end;
 }
 
 #home .content .tit {
@@ -230,7 +401,8 @@
 
 #home .content .tit .desc {
     position: absolute;
-    left: -1%;
+    left: 30%;
+    transform: translate(50%, 0);
     top: 17%;
     font-size: 30px;
     text-transform: uppercase;
@@ -314,7 +486,7 @@
     left: 0;
     width: 100%;
     height: 3px;
-    background: linear-gradient(135deg, #6667AB, #B66DB0, #F3799E, #FF9780, #FFC568, #F9F871);
+    background: linear-gradient(135deg, #6667AB, #B66DB0, #F3799E, #FF9780, #ee6409, #aaf102);
     border-radius: 3px;
     background-size: 600% 600%;
     animation: gradient_ani 5s ease infinite;
@@ -326,11 +498,11 @@
     bottom: 45%;
     width: 49.5%;
 
-    display: none;
+
 }
 
 #home .content .tit .line span:nth-child(2) {
-    top: 0;
+    top: -2%;
     left: 37%;
 }
 
@@ -341,97 +513,71 @@
     width: 49.5%;
     left: 50.3%;
 
-    display: none;
+
 }
 
 #home .content .tit .line span:nth-child(4) {
-    bottom: 0;
+    bottom: 30%;
     left: -27%;
 }
 
-#home .content .slide_box_wraper {
-    position: relative;
-    width: 51%;
+
+
+
+
+.gooey {
+    filter: url(#goo);
+
+    position: absolute;
+    top: -174px;
+    left: -600px;
+    width: 100%;
     height: 100vh;
+    /* box-shadow: 0 0 30px #333; */
+    animation: box infinite 2s;
     overflow: hidden;
 }
 
-#home .content .slide_box_wraper .slide_box {
+.gooey::before {
+    content: "";
     position: absolute;
-    left: 346px;
-    top: 88px;
-    width: 450px;
-    height: 650px;
+
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    z-index: 666;
+    background: #ffd900;
+    /* box-shadow: 0 0 60px rgba(0, 0, 0, 0.25); */
+    animation: before 5s infinite;
 }
 
-#home .content .slide_box_wraper .box1 {
-    position: relative;
-}
-
-#home .content .slide_box_wraper .box1 img {
+.gooey::after {
+    content: "";
     position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
+    bottom: -300px;
+    left: -300px;
+    width: 800px;
+    height: 800px;
+    border-radius: 50%;
+    background: #ffd900;
+    /* box-shadow: 0 0 60px rgba(0, 0, 0, 0.25); */
 }
 
-#home .content .slide_box_wraper .box2 img {
-    width: 100%;
-    height: 100%;
+
+
+@keyframes before {
+    0% {
+        bottom: 400px;
+        left: 400px;
+    }
+
+    100% {
+        bottom: 700px;
+        left: 700px;
+        opacity: 0;
+    }
 }
 
-#home .content .slide_box_wraper .box2 .box2_1st {
-    position: absolute;
-    left: 7px;
-    top: -9px;
-    width: 450px;
-    height: 650px;
-    background-color: rgb(240, 139, 113);
-    transform: translate(0%, 0%) rotate(15deg);
-}
-
-#home .content .slide_box_wraper .box2 .box2_2nd {
-    position: absolute;
-    left: 8px;
-    top: 731px;
-    width: 450px;
-    height: 650px;
-    background-color: rgb(7, 120, 143);
-    transform: translate(0%, 0%) rotate(50deg);
-}
-
-#home .content .slide_box_wraper .box2 .box2_3th {
-    position: absolute;
-    left: 8px;
-    top: 731px;
-    width: 450px;
-    height: 650px;
-    background-color: rgb(249, 205, 22);
-    transform: translate(0%, 0%) rotate(50deg);
-}
-
-#home .content .slide_box_wraper .box3 {
-    width: 320px;
-    height: 600px;
-    left: 418px;
-    top: 112px;
-}
-
-#home .content .slide_box_wraper .box3 img {
-    position: absolute;
-    left: 0;
-    top: 0;
-    display: block;
-    width: 100%;
-    height: 50%;
-}
-
-#home .content .slide_box_wraper .box3 img:nth-child(2),
-#home .content .slide_box_wraper .box3 img:nth-child(4),
-#home .content .slide_box_wraper .box3 img:nth-child(6) {
-    top: 50%;
-}
 
 /*############### #about ###############  */
 
@@ -442,7 +588,7 @@
     width: 100%;
     height: 100vh;
     background-color: #fff;
-    background: url(../img/about/about_blue.png) no-repeat center;
+
     background-size: cover;
 }
 
@@ -461,65 +607,9 @@
     top: 0;
 }
 
-#about .about_bg .yellowbox {
-    width: 500px;
-    height: 100vh;
-    background-color: #FFE362;
-}
 
-#about .about_bg .circle_img {
-    position: absolute;
-    left: 257px;
-    top: 205px;
-    width: 500px;
-    height: 500px;
-    overflow: hidden;
-    border-radius: 50%;
-}
 
-.rotate1 {
-    position: absolute;
-    padding: 1em;
-    box-sizing: border-box;
-    width: 550px;
-    height: 550px;
-    overflow: hidden;
-    left: 253px;
-    top: 191px;
-    animation: rotate 6s linear infinite alternate;
-    transform-origin: center;
-}
 
-.rotate1 .rotate_line1 {
-    width: 500px;
-    height: 500px;
-    border: 1px solid #ff6b3e;
-    animation: go 6s linear infinite;
-    box-sizing: border-box;
-}
-
-.rotate2 {
-    position: absolute;
-    padding: 1em;
-    box-sizing: border-box;
-    width: 550px;
-    height: 550px;
-    overflow: hidden;
-    left: 201px;
-    top: 164px;
-    animation: rotate 4s linear infinite alternate;
-    transform-origin: center;
-}
-
-.rotate2 .rotate_line2 {
-    width: 500px;
-    height: 500px;
-    border: 1px solid #6667AB;
-    border-radius: 50%;
-    border-left: none;
-    border-top: none;
-    box-sizing: border-box;
-}
 
 .whitebox {
     position: absolute;
@@ -530,6 +620,7 @@
     background: #fff;
     border-radius: 50%;
 }
+
 
 #about .about_content {
     position: relative;
@@ -591,7 +682,7 @@
     width: 100%;
     height: 100%;
     margin: auto;
-    padding: 1px 0px 0px 1px;
+    padding: 1px 0px 0px 10px;
 }
 
 #about .card4 .about_img img {
@@ -632,35 +723,7 @@
     animation-delay: -0.6s;
 }
 
-#about .easypieChart .box {
-    position: relative;
-    width: 77%;
-    height: auto;
-    margin: auto;
-}
 
-#about .easypieChart .card7 .box,
-#about .easypieChart .card10 .box {
-    margin-top: 47px;
-}
-
-#about .easypieChart .box .chart {
-    width: 80%;
-}
-
-#about .easypieChart .box .chart canvas {
-    width: 100%;
-    height: 100%;
-}
-
-#about .easypieChart .box h3 {
-    position: absolute;
-    left: 64%;
-    top: 22%;
-    color: #222;
-    font-size: 48px;
-    text-align: center;
-}
 
 
 /*############### #web ###############  */
