--- a/css/font.css
+++ b/css/font.css
@@ -1,6 +1,31 @@
 @import url('https://fonts.googleapis.com/csl1?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&display=swap');
 /* font-family: 'IBM Plex Sans KR', sans-serif; */
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&family=Roboto:wght@100;300;400;500;700;900&display=swap');
+
+@import url('https://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css');
+
+@font-face {
+  font-family: 'GmarketSansMedium';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/GmarketSansMedium.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Pretendard-Regular';
+  src: url('https://cdn.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'SDSamliphopangche_Outline';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts-20-12@1.0/SDSamliphopangche_Outline.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 
 @font-face {
   font-family: 'ghanachoco';
@@ -24,6 +49,7 @@
 }
 
 
+
 @font-face {
   font-family: 'Pistilli';
   src: url('Pistilli.eot');
@@ -35,4 +61,3 @@
   font-weight: normal;
   font-style: normal;
 }
-
