--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,14 @@
 }
 
 /* https://www.crocus.co.kr/1582 */
+#welcome .line {
+  margin: 0 auto;
+  margin-top: 240px;
+  width: 65%;
+  height: 2px;
+  background: linear-gradient(to left, #fc5c7d, #6a82fb);
+}
+
 #welcome .wel_text {
   width: 100%;
   position: absolute;
@@ -50,17 +58,22 @@
   animation: wel_text_ani 3s ease-in-out both;
   text-align: center;
   text-transform: uppercase;
-  font-family: sans-serif;
-  letter-spacing: 4px;
+  font-family: "SDSamliphopangche_Outline";
   position: absolute;
   top: -120px;
   font-weight: 300;
   margin-top: -65px;
-  color: #f9f9f9;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  font-weight: 800;
+  -webkit-text-stroke: 1.5px #111;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  background-repeat: no-repeat;
+  background-image: linear-gradient(0deg, #f9f9f9 0%, #fff 50%, transparent 50%);
+  background-position: 100% 100%;
+  background-size: 100% 0%;
+  letter-spacing: 0;
+  display: block;
+  margin: 0 auto;
+  text-shadow: 0 0 80px rgba(255, 255, 255, 0.5);
 }
 
 /*애니*/
@@ -114,7 +127,7 @@
   height: var(--star-size-s);
   margin-left: 8%;
   margin-top: 12%;
-  animation: twinkle 10s infinite, fade-in 10s 1;
+  animation: twinkle 1s infinite, fade-in 10s 1;
   -webkit-animation: twinkle 1s infinite, fade-in 10s ease 1s 1;
 }
 
@@ -196,15 +209,6 @@
     top: 10%;
   }
 }
-@keyframes fade-in {
-  60% {
-    opacity: 0;
-  }
-  100% {
-    opacity: 1;
-    background: white;
-  }
-}
 @keyframes twinkle {
   50% {
     transform: scale(0.5);
@@ -230,6 +234,10 @@
   background: #fff;
   /* background: #f9f9f9; */
   overflow: hidden;
+}
+
+#home {
+  background: url(../images/b.png);
 }
 
 #home .nav {
@@ -423,6 +431,7 @@
   height: 3px;
   background: linear-gradient(135deg, #6667AB, #B66DB0, #F3799E, #FF9780, #ee6409, #aaf102);
   border-radius: 3px;
+  z-index: 1;
   background-size: 600% 600%;
   animation: gradient_ani 5s ease infinite;
 }
@@ -499,6 +508,15 @@
     opacity: 0;
   }
 }
+.box {
+  position: absolute;
+  right: -400px;
+  bottom: -50px;
+  width: 30px;
+  height: 30px;
+  background-color: black;
+}
+
 /*############### #about ###############  */
 #about {
   position: fixed;
@@ -511,11 +529,13 @@
 }
 
 #about > h2 {
-  font-family: "ghanachoco";
+  font-family: "Pretendard-Regular";
   text-align: center;
   font-size: 90px;
   padding: 9px 0px;
   color: #222;
+  margin-top: 15px;
+  margin-bottom: 15px;
   text-shadow: 1px 0px 1px #cccccc, 0px 1px 1px #eeeeee, 2px 1px 1px #cccccc, 1px 2px 1px #eeeeee, 3px 2px 1px #cccccc, 2px 3px 1px #eeeeee, 4px 3px 1px #cccccc, 3px 4px 1px #eeeeee, 5px 4px 1px #cccccc, 4px 5px 1px #eeeeee, 6px 5px 1px #cccccc, 5px 6px 1px #eeeeee, 7px 6px 1px #cccccc;
 }
 
