--- a/css/style.css
+++ b/css/style.css
@@ -531,7 +531,7 @@
   height: 100px;
   border-radius: 50%;
   z-index: 666;
-  background: #ffd900;
+  background: rgba(255, 110, 110, 0.5);
   /* box-shadow: 0 0 60px rgba(0, 0, 0, 0.25); */
   animation: before 5s infinite;
 }
@@ -544,8 +544,8 @@
   width: 800px;
   height: 800px;
   border-radius: 50%;
-  background: #ffd900;
   /* box-shadow: 0 0 60px rgba(0, 0, 0, 0.25); */
+  background: url(../images/splash-4117519_1280.png);
 }
 
 @keyframes before {
@@ -565,7 +565,6 @@
   bottom: -50px;
   width: 30px;
   height: 30px;
-  background-color: black;
 }
 
 /*############### #about ###############  */
