--- a/css/style.scss
+++ b/css/style.scss
@@ -605,7 +605,7 @@ body {
     height: 100px;
     border-radius: 50%;
     z-index: 666;
-    background: #ffd900;
+    background: rgba(255, 110, 110, 0.5);
     /* box-shadow: 0 0 60px rgba(0, 0, 0, 0.25); */
     animation: before 5s infinite;
 }
@@ -618,8 +618,9 @@ body {
     width: 800px;
     height: 800px;
     border-radius: 50%;
-    background: #ffd900;
+
     /* box-shadow: 0 0 60px rgba(0, 0, 0, 0.25); */
+    background: url(../images/splash-4117519_1280.png);
 }
 
 
@@ -643,9 +644,11 @@ body {
     bottom: -50px;
     width: 30px;
     height: 30px;
-    background-color: black;
+
+
 }
 
+.box::before {}
 
 #home .pen img {}
 
