--- a/css/style.scss
+++ b/css/style.scss
@@ -1151,7 +1151,7 @@ body {
     position: absolute;
     width: 300px;
     height: 500px;
-    left: -88px;
+    left: -18px;
     bottom: 98px;
 }
 
@@ -1231,6 +1231,127 @@ body {
 }
 
 
+/*lhbox*/
+
+
+
+.lhbox {
+    display: flex;
+    margin-left: 800px;
+}
+
+.lhbox .slide_wrap {
+    position: relative;
+}
+
+.lhbox .slide_wrap .monitor {
+    width: 800px;
+    height: 700px;
+
+}
+
+.lhbox .slide_wrap .monitor_box {
+    position: absolute;
+    top: 17px;
+    left: 21px;
+    background: url(../images/LH건설.png) no-repeat;
+    width: 753px;
+    height: 372px;
+    background-size: cover;
+    transition: 3s;
+    background-position: top;
+}
+
+
+.lhbox .slide_wrap .bottom_box:hover {
+    background-position: bottom;
+}
+
+.lhbox .slide_wrap .tablet {
+    position: absolute;
+    width: 300px;
+    height: 500px;
+    left: 50px;
+    bottom: 98px;
+}
+
+.lhbox .slide_wrap .tablet_box {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    background: url(../images/LH-태블릿.png) no-repeat;
+    width: 270px;
+    height: 370px;
+    background-size: cover;
+    transition: 3s;
+    background-position: top;
+}
+
+.lhbox .slide_wrap .mobile {
+    position: absolute;
+    width: 200px;
+    height: 300px;
+    right: -1px;
+    bottom: 221px;
+}
+
+.lhbox .slide_wrap .mobile_box {
+    position: absolute;
+    top: 64px;
+    left: 27px;
+    background: url(../images/LH-MO.png) no-repeat;
+    width: 147px;
+    height: 274px;
+    background-size: cover;
+    transition: 3s;
+    background-position: top;
+}
+
+.lhbox .lh_desc {
+    margin-left: 100px;
+    margin-top: 50px;
+    font-size: 20px;
+}
+
+.lhbox .lh_desc .lh_logo h3 {
+
+    font-size: 40px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+
+
+    font-weight: 700;
+    color: #333;
+    line-height: 50px
+}
+
+
+.lhbox .lh_info span {
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-weight: 500;
+    color: #333;
+    padding-bottom: 10px;
+    line-height: 10px;
+    font-size: 18px;
+}
+
+.lhbox .lh_info p {
+    font-size: 16px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+
+    color: #666;
+
+    font-weight: 300;
+}
+
+.lhbox .lh_desc .lh_logo img {
+    height: 100%;
+}
+
+
+
 
 /*#####----- panerl_2 -----######  */
 .panerl_2 {
@@ -1245,92 +1366,123 @@ body {
     display: flex;
 }
 
-/* ---------- hana ---------- */
-
-.panerl_2 .web_fo2 .hana {
-    position: relative;
+/* ---------- panstarbox ---------- */
+.panstarbox {
     display: flex;
-    align-items: center;
+    margin-left: 400px;
 }
 
-.panerl_2 .web_fo2 .hana .hana_preveiw {
-    width: 1000px;
-    height: 600px;
-    background: url(../img/portfolio/hanacard.png) no-repeat;
-    background-size: cover;
+.panstarbox .slide_wrap {
+    position: relative;
 }
 
-.hana_icon {
+.panstarbox .slide_wrap .monitor {
+    width: 800px;
+    height: 700px;
+
+}
+
+.panstarbox .slide_wrap .monitor_box {
     position: absolute;
-    top: 297px;
-    right: -420px;
-    width: 100%;
+    top: 17px;
+    left: 21px;
+    background: url(../images/팬스타.png) no-repeat;
+    width: 753px;
+    height: 372px;
+    background-size: cover;
+    transition: 3s;
+    background-position: top;
+}
+
+
+.panstarbox .slide_wrap .bottom_box:hover {
+    background-position: bottom;
+}
+
+.panstarbox .slide_wrap .tablet {
+    position: absolute;
+    width: 300px;
+    height: 500px;
+    left: 58px;
+    bottom: 98px;
+}
+
+.panstarbox .slide_wrap .tablet_box {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    background: url(../images/팬스타-태블릿.png) no-repeat;
+    width: 270px;
+    height: 370px;
+    background-size: cover;
+    transition: 3s;
+    background-position: top;
+}
+
+.panstarbox .slide_wrap .mobile {
+    position: absolute;
+    width: 200px;
+    height: 300px;
+    right: 10px;
+    bottom: 221px;
+}
+
+.panstarbox .slide_wrap .mobile_box {
+    position: absolute;
+    top: 64px;
+    left: 27px;
+    background: url(../images/펜스타-mo.png) no-repeat;
+    width: 147px;
+    height: 274px;
+    background-size: cover;
+    transition: 3s;
+    background-position: top;
+}
+
+.panstarbox .panstar_desc {
+    margin-left: 100px;
+    margin-top: 50px;
+    font-size: 20px;
+}
+
+.panstarbox .panstar_desc .panstar_logo h3 {
+
+    font-size: 40px;
+    margin-top: 40px;
+    margin-bottom: 20px;
+
+
+    font-weight: 700;
+    color: #333;
+    line-height: 50px
+}
+
+
+.panstarbox .panstar_info span {
+
+    margin-top: 5px;
+    margin-bottom: 5px;
+    font-weight: 500;
+    color: #333;
+    padding-bottom: 10px;
+    line-height: 10px;
+    font-size: 18px;
+}
+
+.panstarbox .panstar_info p {
+    font-size: 16px;
+    margin-top: 15px;
+    margin-bottom: 5px;
+
+    color: #666;
+
+    font-weight: 300;
+}
+
+.panstarbox .panstar_desc .panstar_logo img {
     height: 100%;
 }
 
-.hana_icon .ob {
-    position: absolute;
-}
-
-.hana_icon .ob4 {
-    /* 우산 */
-    left: 455px;
-    top: 302px;
-    animation: ev49_14 0.3s 2.8s both;
-}
-
-.hana_icon .ob5 {
-    /* 슈트케이스 */
-    left: 355px;
-    top: 317px;
-    animation: ev49_05 0.3s 2.7s both;
-}
-
-.hana_icon .ob6 {
-    /* 자동차 */
-    left: 220px;
-    top: 343px;
-    animation: ev49_06 0.6s 1.8s both;
-}
-
-.hana_icon .ob7 {
-    /* 선물 */
-    left: 370px;
-    top: 261px;
-    animation: ev49_05 0.3s 2.9s both;
-}
-
-.hana_icon .ob8 {
-    /* 박스 */
-    left: 360px;
-    top: 284px;
-    animation: ev49_05 0.3s 3.0s both;
-}
-
-.hana_icon .ob9 {
-    /* 가방 */
-    left: 403px;
-    top: 275px;
-    animation: ev49_05 0.3s 3.2s both;
-}
-
-.hana_icon .ob13 {
-    /* 서프라이즈 */
-    left: 378px;
-    top: 189px;
-    animation: ev49_13 3.0s 4.0s both linear;
-    transform-origin: left center;
-}
-
-.panerl_2 .web_fo2 .hana .h_desc {
-    margin-left: 60px;
-    font-size: 20px;
-    margin-top: 25px;
-}
-
-.panerl_2 .web_fo2 .hana .h_desc .h_info {
-    margin: 84px 0px;
-}
 
 /* ---------- wenia ---------- */
 
@@ -1393,152 +1545,7 @@ body {
 
 /* ---------- mac ---------- */
 
-.mac {
-    position: relative;
-    margin-left: 100px;
-    display: flex;
-    align-items: center;
-}
 
-.hover-effect {}
-
-.hover-effect .phone {
-    width: 400px;
-    height: 600px;
-}
-
-.hover-effect .phone img {
-    height: 100%;
-}
-
-.my-div {
-    position: absolute;
-    left: 50px;
-    top: 217px;
-    width: 300px;
-    height: 400px;
-}
-
-.hamburger {
-    position: absolute;
-    left: 273px;
-    bottom: 190px;
-}
-
-.hamburger img {
-    position: absolute;
-    width: 200px;
-    left: 0;
-    top: 0;
-}
-
-.hamburger img:nth-child(1) {
-    z-index: 6;
-    top: -65px;
-    left: -7px;
-}
-
-.hamburger img:nth-child(2) {
-    z-index: 5;
-    top: -57px;
-}
-
-.hamburger img:nth-child(3) {
-    z-index: 4;
-    top: -37px;
-}
-
-.hamburger img:nth-child(4) {
-    z-index: 3;
-    top: -32px;
-}
-
-.hamburger img:nth-child(5) {
-    z-index: 2;
-    top: -6px;
-}
-
-.hamburger img:nth-child(6) {
-    z-index: 1;
-    top: 0;
-}
-
-.mac_info {
-    font-size: 20px;
-}
-
-.hover {
-    position: absolute;
-    left: 22px;
-    top: 85px;
-    font-size: 54px;
-    user-select: none;
-}
-
-.hover span {
-    display: inline-block;
-    animation: float 0.5s ease-in-out infinite;
-}
-
-.hover:hover span {
-    animation: bounce .6s;
-}
-
-.hover span:nth-child(4n) {
-    color: hsl(50, 75%, 55%);
-    text-shadow: 1px 1px hsl(50, 75%, 45%), 2px 2px hsl(50, 45%, 45%), 3px 3px hsl(50, 45%, 45%), 4px 4px hsl(50, 75%, 45%);
-}
-
-.hover span:nth-child(4n-1) {
-    color: hsl(135, 35%, 55%);
-    text-shadow: 1px 1px hsl(135, 35%, 45%), 2px 2px hsl(135, 35%, 45%), 3px 3px hsl(135, 35%, 45%), 4px 4px hsl(135, 35%, 45%);
-}
-
-.hover span:nth-child(4n-2) {
-    color: hsl(155, 35%, 60%);
-    text-shadow: 1px 1px hsl(155, 25%, 50%), 2px 2px hsl(155, 25%, 50%), 3px 3px hsl(155, 25%, 50%), 4px 4px hsl(140, 25%, 50%);
-}
-
-.hover span:nth-child(4n-3) {
-    color: hsl(30, 65%, 60%);
-    text-shadow: 1px 1px hsl(30, 45%, 50%), 2px 2px hsl(30, 45%, 50%), 3px 3px hsl(30, 45%, 50%), 4px 4px hsl(30, 45%, 50%);
-}
-
-.hover span:nth-child(2) {
-    animation-delay: .05s;
-}
-
-.hover span:nth-child(3) {
-    animation-delay: .1s;
-}
-
-.hover span:nth-child(4) {
-    animation-delay: .15s;
-}
-
-.hover span:nth-child(5) {
-    animation-delay: .2s;
-}
-
-.hover span:nth-child(6) {
-    animation-delay: .25s;
-}
-
-.hover span:nth-child(7) {
-    animation-delay: .3s;
-}
-
-.hover span:nth-child(8) {
-    animation-delay: .35s;
-}
-
-.hover span:nth-child(9) {
-    animation-delay: .4s;
-}
-
-.hover span:nth-child(10) {
-    animation-delay: .45s;
-}
 
 .panerl_3 .web_fo3 {
     position: relative;
@@ -1546,119 +1553,7 @@ body {
     overflow-x: hidden;
 }
 
-.panerl_3 .web_fo3 h2 {
-    position: absolute;
-    left: 28%;
-    top: 10%;
-    font-family: 'GongGothicMedium';
-    font-size: 50px;
-}
 
-.panerl_3 .swiper {
-    width: 100%;
-    position: absolute;
-    left: -165px;
-    top: 221px;
-}
-
-.panerl_3 .swiper-slide {
-    width: 500px;
-    height: 500px;
-    object-fit: cover;
-}
-
-.panerl_3 .swiper-slide img {
-    display: block;
-    width: 100%;
-    height: 100%;
-}
-
-.panerl_3 .swiper-pagination-bullets.swiper-pagination-horizontal {
-    bottom: 91px;
-    left: -159px;
-
-}
-
-.panerl_3 .swiper-pagination-bullet {
-    width: 12px;
-    height: 12px;
-    background: transparent;
-    border: 1px solid #cbd4d9;
-    opacity: 1;
-    background: #fff;
-}
-
-.panerl_3 .swiper-pagination-bullet-active {
-    border-radius: 5px;
-    background: #517180;
-    border: 1px solid transparent;
-}
-
-
-.panerl_3 .stit_wrap {
-    color: #111;
-    position: relative;
-    display: inline-block;
-    left: 29%;
-    top: 12%;
-}
-
-.panerl_3 .s_tit {
-    font-size: 65px;
-    font-weight: 600;
-    font-family: 'GongGothicMedium';
-    color: #333333;
-    text-shadow: 2px 2px 0px #ffffff, 5px 4px 0px rgb(0 0 0 / 15%);
-}
-
-.panerl_3 .mark {
-    border-bottom: 4px solid #2C6BB2;
-    font-size: 24px;
-    width: 93px;
-    position: absolute;
-    top: -41px;
-    left: 0px;
-    transform: translate3d(0, 0, 0);
-    animation: mark-anim 10s infinite cubic-bezier(0.55, 0, 0.1, 1);
-}
-
-.panerl_3 .c,
-.panerl_3 .r,
-.panerl_3 .o,
-.panerl_3 .l1,
-.panerl_3 .l2 {
-    will-change: margin-left, margin-right;
-}
-
-.panerl_3 .c {
-    margin-left: 0.25rem;
-    margin-right: 0.25rem;
-    animation: r-anim 10s infinite cubic-bezier(0.55, 0, 0.1, 1);
-}
-
-.panerl_3 .r {
-    margin-left: 0.5rem;
-    margin-right: 0.5rem;
-    animation: e1-anim 10s infinite cubic-bezier(0.55, 0, 0.1, 1);
-}
-
-.panerl_3 .o {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    animation: s1-anim 10s infinite cubic-bezier(0.55, 0, 0.1, 1);
-}
-
-.panerl_3 .l1 {
-    margin-left: 1rem;
-    margin-right: 1rem;
-    animation: l1-anim 10s infinite cubic-bezier(0.55, 0, 0.1, 1);
-}
-
-.panerl_3 .l2 {
-    margin-left: 2rem;
-    margin-right: 3rem;
-    animation: l2-anim 10s infinite cubic-bezier(0.55, 0, 0.1, 1);
-}
 
 /*############### #contact ###############  */
 
