--- a/css/style.css
+++ b/css/style.css
@@ -2077,7 +2077,9 @@ body {
   font-size: 17px;
   overflow: hidden;
   width: 73%;
-  margin: 18px auto;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-left: 30px;
 }
 
 #contact .contact_box .c_box .ssmbs span {
@@ -2096,6 +2098,8 @@ body {
 }
 
 #contact .contact_box .c_box .con_left p {
+  margin-top: 8px;
+  margin-left: 20px;
   font-size: 18px;
   line-height: 30px;
 }
@@ -2122,8 +2126,8 @@ body {
   width: 829px;
   height: 242px;
   position: absolute;
-  left: -468px;
-  bottom: 32px;
+  left: -398px;
+  bottom: -120px;
   z-index: -1;
   border-radius: 0 0 0 57px;
 }
