--- a/css/style.css
+++ b/css/style.css
@@ -787,7 +787,7 @@ body {
 #web .p_desc {
   width: 1700px;
   height: 100%;
-  background: url(../images/landscape-7283516_1920.jpg) no-repeat -40px center;
+  background: url(../images/desc_bg.png) no-repeat -40px center;
   background-size: cover;
 }
 
@@ -1769,7 +1769,6 @@ body {
   position: absolute;
   left: 28%;
   top: 10%;
-  font-family: "GongGothicMedium";
   font-size: 50px;
 }
 
@@ -1796,15 +1795,6 @@ body {
 .panerl_3 .swiper-pagination-bullets.swiper-pagination-horizontal {
   bottom: 91px;
   left: -159px;
-}
-
-.panerl_3 .swiper-pagination-bullet {
-  width: 12px;
-  height: 12px;
-  background: transparent;
-  border: 1px solid #cbd4d9;
-  opacity: 1;
-  background: #fff;
 }
 
 .panerl_3 .swiper-pagination-bullet-active {
