--- a/css/style.css
+++ b/css/style.css
@@ -679,7 +679,7 @@ body {
   font-family: "KyoboHandwriting2020A";
   font-size: 36px;
   padding: 16px 0px;
-  color: #2C6BB2;
+  color: #000;
 }
 
 #about .card span {
