--- a/css/style.scss
+++ b/css/style.scss
@@ -987,6 +987,8 @@ body {
     position: relative;
     writing-mode: vertical-rl;
     padding: 33px 10px;
+
+    margin-left: 10px;
     font-size: 20px;
     height: 100%;
     background: #fff;
@@ -999,13 +1001,16 @@ body {
 }
 
 
+
 .p_tit:hover {
     background: #cbd4d9;
 }
 
 .p_tit span {
+    position: relative;
     display: inline-block;
     width: 34px;
+    left: -5px;
 }
 
 .p_name {
